[project]
name = "reddit-nlp-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "nltk>=3.9.2",
    "notebook>=7.5.0",
    "pandas>=2.3.3",
    "praw>=7.8.1",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "wordcloud>=1.9.4",
]
